--- a/receitas.html
+++ b/receitas.html
@@ -8,14 +8,17 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="equipe.html">Nossa Equipe</a></li>
+                <li><a href="receitas.html">Receitas</a></li>
+                <li><a href="loja.html">Loja</a></li>
+                <li><a href="login.html">Login</a></li>
+            </ul>
+          </nav> 
         <main>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="equipe.html">Nossa Equipe</a>
-                <a href="receitas.html">Receitas</a>
-                <a href="loja.html">Loja</a>
-                <a href="login.html">Login</a>
-            </nav>
+           
         </main>
     </header>
     <section>
