Iniciando home do site

--- a/index.html
+++ b/index.html
@@ -4,26 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Culinária Front</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
-    <header>
+
+        <header>
+            <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="equipe.html">Equipe</a></li>
+                <li><a href="receitas.html">Receitas</a></li>
+                <li><a href="loja.html">Loja</a></li>
+                <li><a href="login.html">Login</a></li>
+            </ul>
+            </nav>
+        </header>
+
+    <main>
+        <div class="slide">
+            <img src="./img/pizza receitas.jpg" alt="capa do site">
+        </div> 
+    </main>
         
-         <nav>
-          <ul>
-             <li><a href="index.html">Home</a></li>
-             <li><a href="equipe.html">Nossa Equipe</a></li>
-              <li><a href="receitas.html">Receitas</a></li>
-              <li><a href="loja.html">Loja</a></li>
-              <li><a href="login.html">Login</a></li>
-          </ul>
-        </nav>
-     <main>
-
-     </main>
-    </header>
     <section>
+        <div class="container">
+            <div class="card">
+                <img src="./img/Risoto-de-Cogumelos.jpg" alt="">
+              <h2>Risoto de Cogumelos Selvagens</h2>
+              <p>Uma receita deliciosa e reconfortante, perfeita para qualquer ocasião.</p>
+              <a href="receitas.html">Ver Receita</a>
+            </div>
+            <div class="card">
+                <img src="./img/salada de quinoa.jpg" alt="">
+              <h2>Salada de Quinoa com Abacate e Tomate</h2>
+              <p>Uma salada refrescante e nutritiva, repleta de sabores frescos e saudáveis.</p>
+              <a href="receitas.html">Ver Receita</a>
+            </div>
+            <div class="card">
+                <img src="./img/salmão molho de ervas.jpg" alt="">
 
+              <h2>Salmão Grelhado com Molho de Ervas Frescas</h2>
+              <p>Um prato delicioso e saudável, perfeito para uma refeição leve e saborosa.</p>
+              <a href="receitas.html">Ver Receita</a>
     </section>
+
+    <footer>
+        <p>&copy; 2024  @Grupo3. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
