--- a/login.html
+++ b/login.html
@@ -11,18 +11,22 @@
         <nav>
             <ul>
                <li><a href="index.html">Home</a></li>
-               <li><a href="equipe.html">Nossa Equipe</a></li>
+               <li><a href="equipe.html"> Equipe</a></li>
                 <li><a href="receitas.html">Receitas</a></li>
                 <li><a href="loja.html">Loja</a></li>
                 <li><a href="login.html">Login</a></li>
             </ul>
           </nav>
+    </header>  
      <main>
             
     </main>
-    </header>
+    
     <section>
 
     </section>
+    <footer>
+        <p>&copy; 2024  @Grupo3. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
