adicionando alterações na home

--- a/index.html
+++ b/index.html
@@ -24,8 +24,30 @@
         </header>
 
     <main>
-        <div class="slide">
-            <img src="./img/pizza receitas.jpg" alt="capa do site">
+        <div class="slider">
+            <div class="slides">
+                <input type="radio" name="radio-btn" id="radio1">
+                <input type="radio" name="radio-btn" id="radio2">
+                <input type="radio" name="radio-btn" id="radio3">
+
+                <div class="slide-first">
+                    <img src="./img/Risoto-de-Cogumelos.jpg" alt="">
+                </div>
+
+                <div class="slide">
+                    <img src="./img/salmão molho de ervas.jpg" alt="">
+                </div>
+
+                <div class="slide">
+                    <img src="./img/receitas-saudáveis.jpg" alt="">
+                </div>
+
+            </div>
+            <div class="navegation-bar">
+                <label class="manual-btn" for="radio1"></label>
+                <label class="manual2-btn" for="radio2"></label>
+                <label class="manual3" for="radio3"></label>
+            </div>
         </div> 
     </main>
         
