Alterações no css

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </main>
         
     <section>
+        <h2>Receitas mais visitadas do mês:</h2>
         <div class="container">
             <div class="card">
                 <img src="./img/Risoto-de-Cogumelos.jpg" alt="">
