--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 <main>
     <div class="slider">
         <div class="slides">
-            <input type="radio" name="radio-btn" id="radio1">
-            <input type="radio" name="radio-btn" id="radio2">
-            <input type="radio" name="radio-btn" id="radio3">
+            <input type="radio" name="radio-btn" id="radio1" class="radio-btn">
+            <input type="radio" name="radio-btn" id="radio2" class="radio-btn">
+            <input type="radio" name="radio-btn" id="radio3" class="radio-btn">
+
 
             <div class="slide-first">
                 <img src="./img/Risoto-de-Cogumelos.jpg" alt="">
