--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Culinária Front</title>
+    <title>Cozinha 20</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
-
+     
 <header>
-    <img src="" alt="">
+   
     <nav>
+        <img src="" alt="Logo cozinha20">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="equipe.html">Equipe</a></li>
@@ -23,7 +24,8 @@
         </ul>
     </nav>
 </header>
-
+     <h2>Cozinha20</h2>
+     <br>
 <main>
     <div class="slider">
         <div class="slides">
