adicionando css nao header

--- a/loja.html
+++ b/loja.html
@@ -7,17 +7,23 @@
     <link rel="stylesheet" href="./css/loja.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-               <li><a href="index.html">Home</a></li>
-               <li><a href="equipe.html"> Equipe</a></li>
-                <li><a href="receitas.html">Receitas</a></li>
-                <li><a href="loja.html">Loja</a></li>
-                <li><a href="login.html">Login</a></li>
+    
+ <header>
+    <div class="container">
+        <div class="logo">
+            <img src="./img/logo2.png" alt="Logo cozinha20">
+        </div>
+        <nav class="navbar">
+            <ul class="nav-menu">
+                <li class="nav-item"><a href="index.html">Home</a></li>
+                <li class="nav-item"><a href="equipe.html">Equipe</a></li>
+                <li class="nav-item"><a href="receitas.html">Receitas</a></li>
+                <li class="nav-item"><a href="loja.html">Loja</a></li>
+                <li class="nav-item"><a href="login.html">Login</a></li>
             </ul>
-          </nav> 
-    </header> 
+        </nav>
+    </div>
+</header>
 
     <main>
         <div class="food-title">
