--- a/loja.html
+++ b/loja.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nossa Equipe</title>
+    <title>Nossa loja</title>
     <link rel="stylesheet" href="./css/loja.css">
 </head>
 <body>
