Adicionando interatividade com js

--- a/equipe.html
+++ b/equipe.html
@@ -160,6 +160,7 @@
         <div id="footer_copyright">
             @2024 Direitos reservados ao grupo3
         </div>
-    </footer>                    
+    </footer> 
+    <script src="equipe.js"></script>                   
 </body>
 </html>
