--- a/receitas.html
+++ b/receitas.html
@@ -418,6 +418,7 @@
                                 <div id="footer_copyright">
                                     @2024 Direitos reservados ao grupo3
                                 </div>
-                            </footer>                    
+                            </footer>     
+               <script src="receitas.js"></script>                            
 </body>
 </html>
