--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
         <div id="footer_copyright">
             @2024 Direitos reservados ao grupo3
         </div>
-    </footer>                    
+    </footer> 
+    <script src="home.js"></script>                   
     </body>
     </html>
