ajustando css do carrousel

--- a/equipe.html
+++ b/equipe.html
@@ -72,7 +72,7 @@
     <section class="about-team">
         <article>
             <h2>Nossa Equipe</h2>
-            <img src="./img/chefs/equipe chefs.jpg" alt="equipe">
+            <img class="about-img" src="./img/chefs/equipe chefs.jpg" alt="equipe">
             
             <p>Explorando os Segredos da Culinária: Conheça Nossa Equipe de Especialistas em Receitas
 
