--- a/receitas.html
+++ b/receitas.html
@@ -287,7 +287,7 @@
                                     </div>
 
                                     <div class="receita" id="receita-12">
-                                        <img src="./receitas/ensopado de frango.jpg" alt="Ensopado de Frango">
+                                        <img src="./img/receitas/ensopado de frango.jpg" alt="Ensopado de Frango">
                                         <h2>Ensopado de Frango</h2>
                                         <button class="toggle-button">Receita</button>
                                         <div class="conteudo">
