--- a/cadastro.html
+++ b/cadastro.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./js/login.js" defer></script>
-    <title>Login</title>
-    <link rel="stylesheet" href="./css/login.css">
+    <title>Cadastro</title>
+    <link rel="stylesheet" href="./css/cadastro.css">
+    <script src="./js/cadastro.js" defer></script>
 </head>
 <body>
    
@@ -28,24 +29,42 @@
 <main>
     <section>
         <div class="form">
-            <h2>Login</h2>
+            <h2>Cadastro</h2>
             <form action="">
                 <div class="form-group">
-                    <label for="usuario">Usuário:</label>
-                    <input type="text" id="usuario" name="usuario" required>
-                    <p id="usuario-helper" class="helper-text">Mensagem de ajuda</p>
+                    <label for="nome">*Nome Completo:</label>
+                    <input type="text" id="nome" name="nome" required>
+                    <!-- <p id="nome-helper" class="helper-text">Mensagem de ajuda</p> -->
+                    <p id="nome-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
                 <div class="form-group">
-                    <label for="senha">Senha:</label>
+                    <label for="nome">*Genero:</label>
+                    <input type="radio" name="genero" id="masculino" value="masculino">
+                    <label for="masculino">Masculino</label>
+                    <input type="radio" name="genero" id="feminino" value="feminino">
+                    <label for="feminino">Feminino</label>
+                </div>
+                <div class="form-group">
+                    <label for="email">*Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="telefone">*Telefone:</label>
+                    <input type="tel" id="telefone" name="telefone" required>
+                </div>
+                <div class="form-group">
+                    <label for="endereco">*Endereço:</label>
+                    <input type="text" id="endereco" name="endereco" required>
+                </div>
+                <div class="form-group">
+                    <label for="senha">*Senha:</label>
                     <input type="password" id="senha" name="senha" required>
-                    <p id="senha-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
-                <input type="submit" id="submit" value="Login">
                 <div class="form-group">
-                    <p>Não tem cadastro? 
-                        <a href="./cadastro.html">Clique aqui</a>
-                    </p>
+                    <label for="contra-senha">*Confirmar Senha:</label>
+                    <input type="password" id="contra-senha" name="contra-senha" required>
                 </div>
+                <input type="submit" id="submit" value="Cadastrar">
             </form>
         </div>
     </section>
@@ -125,3 +144,4 @@
 </footer>                    
 </body>
 </html>
+
