aplicação de js na página cadastro

--- a/login.html
+++ b/login.html
@@ -31,12 +31,12 @@
             <h2>Login</h2>
             <form action="">
                 <div class="form-group">
-                    <label for="usuario">Usuário:</label>
+                    <label for="usuario">*Usuário:</label>
                     <input type="text" id="usuario" name="usuario" required>
                     <p id="usuario-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
                 <div class="form-group">
-                    <label for="senha">Senha:</label>
+                    <label for="senha">*Senha:</label>
                     <input type="password" id="senha" name="senha" required>
                     <p id="senha-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
