--- a/cadastro.html
+++ b/cadastro.html
@@ -34,7 +34,6 @@
                 <div class="form-group">
                     <label for="nome">*Nome Completo:</label>
                     <input type="text" id="nome" name="nome" required>
-                    <!-- <p id="nome-helper" class="helper-text">Mensagem de ajuda</p> -->
                     <p id="nome-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
                 <div class="form-group">
@@ -46,11 +45,13 @@
                 </div>
                 <div class="form-group">
                     <label for="email">*Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email-form" name="email" required>
+                    <p id="email-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
                 <div class="form-group">
                     <label for="telefone">*Telefone:</label>
                     <input type="tel" id="telefone" name="telefone" required>
+                    <p id="tel-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
                 <div class="form-group">
                     <label for="endereco">*Endereço:</label>
@@ -144,4 +145,3 @@
 </footer>                    
 </body>
 </html>
-
