--- a/cadastro.html
+++ b/cadastro.html
@@ -37,7 +37,7 @@
                     <p id="nome-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
                 <div class="form-group">
-                    <label for="nome">*Genero:</label>
+                    <label for="genero">*Genero:</label>
                     <input type="radio" name="genero" id="masculino" value="masculino">
                     <label for="masculino">Masculino</label>
                     <input type="radio" name="genero" id="feminino" value="feminino">
@@ -56,6 +56,7 @@
                 <div class="form-group">
                     <label for="endereco">*Endereço:</label>
                     <input type="text" id="endereco" name="endereco" required>
+                    <p id="endereco-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
                 <div class="form-group">
                     <label for="senha">*Senha:</label>
