--- a/cadastro.html
+++ b/cadastro.html
@@ -61,17 +61,17 @@
                 <div class="form-group">
                     <label for="senha">*Senha:</label>
                     <input type="password" id="senha" name="senha" required>
+                    <p id="senha-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
                 <div class="form-group">
                     <label for="contra-senha">*Confirmar Senha:</label>
                     <input type="password" id="contra-senha" name="contra-senha" required>
+                    <p id="contra-senha-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
-                <input type="submit" id="submit" value="Cadastrar">
+                <input type="submit" id="cadastrar" value="Cadastrar">
             </form>
         </div>
     </section>
-    
-    
 </main>
 <footer>
     <div id="footer_content">
