--- a/login.html
+++ b/login.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-    <link rel="stylesheet" href="./css/login.css">
+    <title>Login</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+ rel="stylesheet">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
+ crossorigin="anonymous" referrerpolicy="no-referrer" />
+ <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
    
@@ -19,7 +25,7 @@
                     <li class="nav-item"><a href="equipe.html">Equipe</a></li>
                     <li class="nav-item"><a href="receitas.html">Receitas</a></li>
                     <li class="nav-item"><a href="loja.html">Loja</a></li>
-                    <li class="nav-item"><a href="login.html">Login</a></li>
+                    <li class="nav-item active"><a href="login.html">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -56,15 +62,15 @@
 
             <div id="footer_social_media">
                 <a href="#" class="footer-link" id="instagram">
-                    <i class="fa-brands fa-instagram">I</i>
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
 
                 <a href="#" class="footer-link" id="facebook">
-                    <i class="fa-brands fa-facebook-f">F</i>
+                    <i class="fa-brands fa-facebook-f"></i>
                 </a>
 
                 <a href="#" class="footer-link" id="whatsapp">
-                    <i class="fa-brands fa-whatsapp">W</i>
+                    <i class="fa-brands fa-whatsapp"></i>
                 </a>
             </div>
         </div>
@@ -89,18 +95,18 @@
                 <h3>Serviços</h3>
             </li>
             <li>
-                <a href="#" class="footer-link">Receitas</a>
+                <a href="receitas.html" class="footer-link">Receitas</a>
             </li>
             <li>
-                <a href="#" class="footer-link">Loja</a>
+                <a href="loja.html" class="footer-link">Loja</a>
             </li>
             <li>
-                <a href="#" class="footer-link">Diversos</a>
+                <a href="login.html" class="footer-link">Cadastro</a>
             </li>
         </ul>
 
         <div id="footer_subscribe">
-            <h3>Subscribe</h3>
+            <h3>inscreva-se!</h3>
 
             <p>
                 Deixe seu e-mail para receber atualizações.
