--- a/equipe.html
+++ b/equipe.html
@@ -19,6 +19,7 @@
             <div class="logo">
                 <img src="./img/slide/logo1.png" alt="Logo cozinha20">
             </div>
+            <button class="hamburger">&#9776;</button>
             <nav class="navbar">
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="index.html">Home</a></li>
@@ -28,7 +29,7 @@
                     <li class="nav-item"><a href="login.html">Login</a></li>
                 </ul>
             </nav>
-        </div>
+            </div>
     </header>
 
     <main class="chefes">
@@ -167,6 +168,6 @@
             @2024 Direitos reservados ao grupo3
         </div>
     </footer> 
-    <script src="./js.equipe.js"></script>                   
+    <script src="./js/equipe.js"></script>                   
 </body>
 </html>
