--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="logo">
                 <img src="./img/slide/logo1.png" alt="Logo cozinha20">
             </div>
+            <button class="hamburger">&#9776;</button>
             <nav class="navbar">
                 <ul class="nav-menu">
                     <li class="nav-item active"><a href="index.html">Home</a></li>
