atualizando e ajustando css e js

--- a/equipe.html
+++ b/equipe.html
@@ -15,7 +15,7 @@
 <body>
    
     <header>
-        <div class="container">
+        <div class="container-navbar">
             <div class="logo">
                 <img src="./img/slide/logo1.png" alt="Logo cozinha20">
             </div>
@@ -34,42 +34,42 @@
 
     <main class="chefes">
         <div class="chef">
-            <img src="./img/chefs/chef-feminino.jpg" alt="Chef 1">
-            <h2>ChefAna Silva </h2>
+            <img src="./img/chefs/chef Ana.jpg" alt="Chef 1">
+            <h2>Chef Ana Silva </h2>
             <p>Com uma habilidade natural na cozinha e uma mente criativa, Chef Ana Silva transforma ingredientes simples em obras-primas gastronômicas.
                  Sua abordagem intuitiva e sua paixão pela experimentação a levaram a criar pratos memoráveis que encantam os sentidos e deixam os comensais pedindo por mais.</p>
         </div>
 
         <div class="chef">
-            <img src="./img/chefs/chef-masculino-cortando.jpg" alt="Chef 2">
+            <img src="./img/chefs/chef Miguel.jpg" alt="Chef 2">
             <h2>Chef Miguel Torres</h2>
             <p>Com uma paixão ardente pela culinária desde tenra idade, Chef Miguel Torres combina influências tradicionais com uma abordagem contemporânea. Seus pratos inovadores e sabores ousados conquistaram o paladar de muitos, 
                 enquanto sua dedicação à arte culinária o tornou uma figura respeitada na indústria gastronômica.</p>
         </div>
 
         <div class="chef">
-            <img src="./img/chefs/chef-masculino-no-prato.jpg" alt="Chef 3">
+            <img src="./img/chefs/chef Ricardo.jpg" alt="Chef 3">
             <h2>Chef Ricardo Gomez</h2>
             <p>Com uma carreira marcada por experiências em restaurantes de renome internacional, Chef Ricardo Gomez é conhecido por sua expertise em culinária de fusão. 
                 Sua habilidade em combinar técnicas culinárias de diferentes culturas resulta em pratos complexos e irresistíveis que refletem sua dedicação à arte da gastronomia.</p>
         </div>
 
         <div class="chef">
-            <img src="./img/chefs/cozinheira-em-pe-com-os-bracos-cruzados.jpg" alt="Chef 4">
+            <img src="./img/chefs/chef Sofia.jpg" alt="Chef 4">
             <h2>Chef Sofia Santos</h2>
             <p>Com uma sensibilidade refinada para sabores e uma técnica impecável, Chef Sofia Santos é uma mestre na arte da pastelaria.
                  Seus doces delicados e sobremesas exuberantes cativam os paladares mais exigentes, enquanto sua paixão pela confeitaria a impulsiona a buscar constantemente a perfeição em cada criação.</p>
         </div>
 
         <div class="chef">
-            <img src="./img/chefs/retrato-de-homem-sorrindo.jpg" alt="Chef 5">
+            <img src="./img/chefs/chef Diego.jpg" alt="Chef 5">
             <h2> Chef Diego Hernandez</h2>
             <p>Com uma abordagem autêntica e um profundo respeito pela tradição culinária, Chef Diego Hernandez é um defensor da cozinha regional. 
                 Sua conexão com ingredientes locais e técnicas tradicionais resulta em pratos que celebram a riqueza da cultura gastronômica de sua região e encantam os comensais com sua simplicidade e sabor genuíno.</p>
         </div>
 
         <div class="chef">
-            <img src="./img/chefs/chef Elo.jpg" alt="Chef 6">
+            <img src="./img/chefs/chef Isabella.jpg" alt="Chef 6">
             <h2>Chef Isabella Costa</h2>
             <p>Com uma visão inovadora e uma paixão pela culinária saudável, Chef Isabella Costa é uma líder na cena gastronômica contemporânea. 
                 Seus pratos vibrantes e nutritivos refletem sua filosofia de que comida boa deve ser boa para o corpo e para a alma, inspirando os outros a adotar um estilo de vida mais equilibrado através da comida.</p>
