--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
    
     <header>
-        <div class="container">
+        <div class="container-navbar">
             <div class="logo">
                 <img src="./img/slide/logo1.png" alt="Logo cozinha20">
             </div>
@@ -31,7 +31,8 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="principal">
+
         <section class="carousel">
             <div class="carousel-container">
                 <div class="carousel-slide active">
