--- a/loja.html
+++ b/loja.html
@@ -14,10 +14,11 @@
 <body>
    
     <header>
-        <div class="container">
+        <div class="container-navbar">
             <div class="logo">
                 <img src="./img/slide/logo1.png" alt="Logo cozinha20">
             </div>
+            <button class="hamburger">&#9776;</button>
             <nav class="navbar">
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="index.html">Home</a></li>
@@ -29,8 +30,9 @@
             </nav>
         </div>
     </header>
-    <main>
-        <div class="container">
+    <main class="controle-livros">
+
+        <div class="container-livros">
             <div class="product">
                 <img src="./img/livros/1 segredos da cozinha.png" alt="Capa do Livro">
                 <h2>Segredos da cozinha</h2>
