--- a/login.html
+++ b/login.html
@@ -15,10 +15,11 @@
 <body>
    
     <header>
-        <div class="container">
+        <div class="container-navbar">
             <div class="logo">
                 <img src="./img/slide/logo1.png" alt="Logo cozinha20">
             </div>
+            <button class="hamburger">&#9776;</button>
             <nav class="navbar">
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="index.html">Home</a></li>
