aplicação de js nas páginas login e cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -42,6 +42,7 @@
                     <label for="masculino">Masculino</label>
                     <input type="radio" name="genero" id="feminino" value="feminino">
                     <label for="feminino">Feminino</label>
+                    <p id="genero-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
                 <div class="form-group">
                     <label for="email">*Email:</label>
