--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
                     <li class="nav-item"><a href="equipe.html">Equipe</a></li>
                     <li class="nav-item"><a href="receitas.html">Receitas</a></li>
                     <li class="nav-item"><a href="loja.html">Loja</a></li>
-                    <li class="nav-item"><a href="login.html">Login</a></li>
+                    <li class="nav-item"><a href="login.html">Entrar</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,11 +39,13 @@
                     <input type="password" id="senha" name="senha" required>
                     <p id="senha-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
-                <input type="submit" id="submit" value="Login">
                 <div class="form-group">
-                    <p>Não tem cadastro? 
+                    <button type="submit">Entrar</button>
+                </div>
+                <div class="form-group">
+                    <h5>Não tem cadastro?
                         <a href="./cadastro.html">Clique aqui</a>
-                    </p>
+                    </h5>
                 </div>
             </form>
         </div>
