--- a/loja.html
+++ b/loja.html
@@ -25,12 +25,12 @@
                     <li class="nav-item"><a href="equipe.html">Equipe</a></li>
                     <li class="nav-item"><a href="receitas.html">Receitas</a></li>
                     <li class="nav-item active"><a href="loja.html">Loja</a></li>
-                    <li class="nav-item"><a href="login.html">Login</a></li>
+                    <li class="nav-item"><a href="login.html">Entrar</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <main class="controle-livros">
+    <main class="controle">
 
         <div class="container-livros">
             <div class="product">
@@ -44,7 +44,7 @@
             <div class="product">
                 <img src="./img/livros/16 delícias á mesa.png" alt="Capa do Livro">
                 <h2>Delicías á mesa</h2>
-                <p></p>
+                <p>Descrição do Produto 2</p>
                 <p>R$25,00</p>
                 <input type="number" id="quantity2" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="25" data-nome="Produto 2" data-input="quantity2">Comprar</button>
@@ -146,15 +146,15 @@
                 <p>As melhores receitas na sua mão.</p>
 
                 <div id="footer_social_media">
-                    <a href="#" class="footer-link" id="instagram">
+                    <a href="https://www.instagram.com/" target="_blank" class="footer-link" id="instagram">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
 
-                    <a href="#" class="footer-link" id="facebook">
+                    <a href="https://www.facebook.com/" target="_blank" class="footer-link" id="facebook">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a>
 
-                    <a href="#" class="footer-link" id="whatsapp">
+                    <a href="https://web.whatsapp.com/" target="_blank" class="footer-link" id="whatsapp">
                         <i class="fa-brands fa-whatsapp"></i>
                     </a>
                 </div>
@@ -165,13 +165,13 @@
                     <h3>Contatos</h3>
                 </li>
                 <li>
-                    <a href="#" class="footer-link">Whatsapp</a>
+                    <a href="https://web.whatsapp.com/"  target="_blank" class="footer-link">Whatsapp</a>
                 </li>
                 <li>
-                    <a href="#" class="footer-link">Facebook</a>
+                    <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
                 </li>
                 <li>
-                    <a href="#" class="footer-link">Instagram</a>
+                    <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
                 </li>
             </ul>
 
@@ -186,7 +186,7 @@
                     <a href="loja.html" class="footer-link">Loja</a>
                 </li>
                 <li>
-                    <a href="login.html" class="footer-link">Cadastro</a>
+                    <a href="cadastro.html" class="footer-link">Trabalhe conosco</a>
                 </li>
             </ul>
 
