--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a href="equipe.html">Equipe</a></li>
                     <li class="nav-item"><a href="receitas.html">Receitas</a></li>
                     <li class="nav-item"><a href="loja.html">Loja</a></li>
-                    <li class="nav-item active"><a href="login.html">Login</a></li>
+                    <li class="nav-item active"><a href="login.html">Entrar</a></li>
                 </ul>
             </nav>
         </div>
@@ -62,15 +62,15 @@
             <p>As melhores receitas na sua mão.</p>
 
             <div id="footer_social_media">
-                <a href="#" class="footer-link" id="instagram">
+                <a href="https://www.instagram.com/" target="_blank" class="footer-link" id="instagram">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
 
-                <a href="#" class="footer-link" id="facebook">
+                <a href="https://www.facebook.com/" target="_blank" class="footer-link" id="facebook">
                     <i class="fa-brands fa-facebook-f"></i>
                 </a>
 
-                <a href="#" class="footer-link" id="whatsapp">
+                <a href="https://web.whatsapp.com/" target="_blank" class="footer-link" id="whatsapp">
                     <i class="fa-brands fa-whatsapp"></i>
                 </a>
             </div>
@@ -81,13 +81,13 @@
                 <h3>Contatos</h3>
             </li>
             <li>
-                <a href="#" class="footer-link">whatsapp</a>
+                <a href="https://web.whatsapp.com/" target="_blank" class="footer-link">whatsapp</a>
             </li>
             <li>
-                <a href="#" class="footer-link">Facebook</a>
+                <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
             </li>
             <li>
-                <a href="#" class="footer-link">Instagram</a>
+                <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
             </li>
         </ul>
 
@@ -102,7 +102,7 @@
                 <a href="loja.html" class="footer-link">Loja</a>
             </li>
             <li>
-                <a href="login.html" class="footer-link">Cadastro</a>
+                <a href="cadastro.html" class="footer-link">Trabalhe conosco</a>
             </li>
         </ul>
 
