--- a/cadastro.html
+++ b/cadastro.html
@@ -21,7 +21,7 @@
                     <li class="nav-item"><a href="equipe.html">Equipe</a></li>
                     <li class="nav-item"><a href="receitas.html">Receitas</a></li>
                     <li class="nav-item"><a href="loja.html">Loja</a></li>
-                    <li class="nav-item"><a href="login.html">Login</a></li>
+                    <li class="nav-item"><a href="login.html">Entrar</a></li>
                 </ul>
             </nav>
         </div>
