Ajusteste finais da sprint4

--- a/equipe.html
+++ b/equipe.html
@@ -177,6 +177,7 @@
             @2024 Direitos reservados ao grupo3
         </div>
     </footer> 
+    <button onclick="scrollToTop()" id="btnTopo" title="Voltar ao Topo"></button>
     <script src="./js/equipe.js"></script>                   
 </body>
 </html>
