--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
             @2024 Direitos reservados ao grupo3
         </div>
 </footer> 
+<button onclick="scrollToTop()" id="btnTopo" title="Voltar ao Topo"></button>
     <script src="./js/home.js"></script>                   
 </body>
 </html>
