--- a/receitas.html
+++ b/receitas.html
@@ -415,7 +415,8 @@
                                 <div id="footer_copyright">
                                     @2024 Direitos reservados ao grupo3
                                 </div>
- </footer>     
-               <script src="./js/receitas.js"></script>                            
+ </footer>  
+ <button onclick="scrollToTop()" id="btnTopo" title="Voltar ao Topo"></button>  
+ <script src="./js/receitas.js"></script>                            
 </body>
 </html>
