atualizacao - css - Hiago

--- a/loja.html
+++ b/loja.html
@@ -23,61 +23,84 @@
         <div class="food-title">
             <h3>Risoto</h3>
         </div>
-        <div class="container-vitrine">
-            <div class="vitrine">
-                <h5>Risoto de Cogumelos</h5>
-                <img src="/img/Risoto-de-Cogumelos.jpg" alt="">
-                <p>R$ 60,00</p>
-                <ul>
-                    <li><a href="/login.html">Comprar</a></li>
-                </ul>
+        <div class="container-item">
+            <div class="item">
+                <div class="descricao"> 
+                    <h4>Risoto de Camarão</h4>
+                    <p>Delicioso risoto cremoso com camarão suculento</p>
+                    <p> <img src="/img/payments.png"> 60,00</p>
+                    <ul>
+                        <li><a href="/login.html">Comprar</a></li>
+                    </ul>  
+                </div>
+                <div class="img-descricao">
+                    <img src="/img/risoto-de-camarao.jpg" alt="">  
+                </div>
             </div>
-            <div class="vitrine">
-                <h5>Risoto de Cogumelos</h5>
-                <img src="/img/Risoto-de-Cogumelos.jpg" alt="">
-                <p>R$ 60,00</p>
-                <ul>
-                    <li><a href="/login.html">Comprar</a></li>
-                </ul>
+            <div class="item">
+                <div class="descricao">
+                    <h4>Risoto de Cogumelos</h4>
+                    <p>Risoto cremoso com cogumelos frescos e aromáticos</p>
+                    <p> <img src="/img/payments.png"> 60,00</p>
+                    <ul>
+                        <li><a href="/login.html">Comprar</a></li>
+                    </ul>
+                </div>
+                <div class="img-descricao">
+                    <img src="/img/Risoto-de-Cogumelos.jpg" alt="">
+                </div>
             </div>
         </div>
 
         <div class="food-title">
             <h3>Salada</h3>
         </div>
-        <div class="container-vitrine">
-            <div class="vitrine">
-                <h5>Salada de Quinoa</h5>
-                <img src="/img/salada de quinoa.jpg" alt="">
-                <p>R$ 20,00</p>
-                <ul>
-                    <li><a href="/login.html">Comprar</a></li>
-                </ul>
+        <div class="container-item">
+            <div class="item">
+                <div class="descricao">
+                    <h4>Salada de Quinoa</h4>
+                    <p>Salada refrescante e nutritiva com quinoa crocante</p>
+                    <p> <img src="/img/payments.png"> 20,00</p>
+                    <ul>
+                        <li><a href="/login.html">Comprar</a></li>
+                    </ul>
+                </div>
+                <div class="img-descricao">
+                    <img src="/img/salada de quinoa.jpg" alt="">
+                </div>
             </div>
         </div>
 
         <div class="food-title">
             <h4>Frutos do Mar</h4>
         </div>
-        <div class="container-vitrine">
-            <div class="vitrine">
-                <h5>Salmão</h5>
-                <div class="foto">
+        <div class="container-item">
+            <div class="item">
+                <div class="descricao">
+                    <h4>Salmão</h4>
+                    <p>Peixe suculento e saboroso, rico em ômega-3</p>
+                    <p> <img src="/img/payments.png"> 70,00</p>
+                    <ul>
+                        <li><a href="/login.html">Comprar</a></li>
+                    </ul>
+                </div>
+                <div class="img-descricao">
                     <img src="/img/images6.jpg" alt="">
                 </div>
-                <p>R$ 70,00</p>
-                <ul>
-                    <li><a href="/login.html">Comprar</a></li>
-                </ul>
             </div>
                 
-            <div class="vitrine">
-                <h5>Salmão ao Molho de Ervas</h5>
-                <img src="/img/salmão molho de ervas.jpg" alt="">
-                <p>R$ 90,00</p>
-                <ul>
-                    <li><a href="/login.html">Comprar</a></li>
-                </ul>
+            <div class="item">
+                <div class="descricao">
+                    <h4>Salmão ao Molho de Ervas</h4>
+                    <p>Salmão grelhado com molho aromático de ervas</p>
+                    <p> <img src="/img/payments.png"> 90,00</p>
+                    <ul>
+                        <li><a href="/login.html">Comprar</a></li>
+                    </ul>
+                </div>
+                <div class="img-descricao">
+                    <img src="/img/salmão molho de ervas.jpg" alt="">
+                </div>
             </div>
         </div>
     </main>
