--- a/loja.html
+++ b/loja.html
@@ -37,29 +37,28 @@
                 <img src="./img/livros/1 segredos da cozinha.png" alt="Capa do Livro">
                 <h2>Segredos da cozinha</h2>
                 <p>Descrição do Produto 1</p>
-                <p>R$20,00</p>
+                <p>R$50,00</p>
                 <input type="number" id="quantity1" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="20" data-nome="Produto 1" data-input="quantity1">Comprar</button>
-                <button class="carrinho-btn" onclick="adicionarAoCarrinho('Secreto das especiarias', 30)"><i class="fas fa-shopping-cart"></i></button>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('segredos da cozinha', 50)"><i class="fas fa-shopping-cart"></i></button>
             </div>
             <div class="product">
                 <img src="./img/livros/16 delícias á mesa.png" alt="Capa do Livro">
                 <h2>Delicías á mesa</h2>
                 <p>Descrição do Produto 2</p>
-                <p>R$25,00</p>
+                <p>R$75,00</p>
                 <input type="number" id="quantity2" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="25" data-nome="Produto 2" data-input="quantity2">Comprar</button>
-                <button class="carrinho-btn" onclick="adicionarAoCarrinho('Secreto das especiarias', 30)"><i class="fas fa-shopping-cart"></i></button>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('delicias a mesa', 75)"><i class="fas fa-shopping-cart"></i></button>
             </div>
             <div class="product">
                 <img src="./img/livros/3secreto das especiarias.png" alt="Capa do Livro">
                 <h2>Secreto das especiarias</h2>
                 <p>Descrição do Produto 3</p>
-                <p>Preço: R$30,00</p>
+                <p>Preço: R$60,00</p>
                 <input type="number" id="quantity3" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="30" data-nome="Produto 3" data-input="quantity3">Comprar</button>
-                <button class="carrinho-btn" onclick="adicionarAoCarrinho('Secreto das especiarias', 30)"><i class="fas fa-shopping-cart"></i></button>
-
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho(' secreto das especiarias', 60)"><i class="fas fa-shopping-cart"></i></button>
             </div>
             <div class="product">
                 <img src="./img/livros/4 a magia dos temperos.png" alt="Capa do Livro">
@@ -68,33 +67,7 @@
                 <p>R$35,00</p>
                 <input type="number" id="quantity4" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="35" data-nome="Produto 4" data-input="quantity4">Comprar</button>
-                <button class="carrinho-btn" onclick="adicionarAoCarrinho('Secreto das especiarias', 30)"><i class="fas fa-shopping-cart"></i></button>
-        <div class="container-item">
-            <div class="item">
-                <div class="descricao"> 
-                    <h4>Risoto de Camarão</h4>
-                    <p>Delicioso risoto cremoso com camarão suculento</p>
-                    <p> <img src="/img/payments.png"> 60,00</p>
-                    <ul>
-                        <li><a href="/login.html">Comprar</a></li>
-                    </ul>  
-                </div>
-                <div class="img-descricao">
-                    <img src="/img/risoto-de-camarao.jpg" alt="">  
-                </div>
-            </div>
-            <div class="item">
-                <div class="descricao">
-                    <h4>Risoto de Cogumelos</h4>
-                    <p>Risoto cremoso com cogumelos frescos e aromáticos</p>
-                    <p> <img src="/img/payments.png"> 60,00</p>
-                    <ul>
-                        <li><a href="/login.html">Comprar</a></li>
-                    </ul>
-                </div>
-                <div class="img-descricao">
-                    <img src="/img/Risoto-de-Cogumelos.jpg" alt="">
-                </div>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('a magia dos temperos', 30)"><i class="fas fa-shopping-cart"></i></button>
             </div>
             <div class="product">
                 <img src="./img/livros/5 cozinhando com amor.png" alt="Capa do Livro">
@@ -103,6 +76,7 @@
                 <p>R$40,00</p>
                 <input type="number" id="quantity5" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="40" data-nome="Produto 5" data-input="quantity5">Comprar</button>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('cozinhando com amor', 40)"><i class="fas fa-shopping-cart"></i></button>
             </div>
             <div class="product">
                 <img src="./img/livros/6aroma &sabor.png" alt="Capa do Livro">
@@ -111,6 +85,7 @@
                 <p>R$45,00</p>
                 <input type="number" id="quantity6" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="45" data-nome="Produto 6" data-input="quantity6">Comprar</button>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('aroma & sabor', 45)"><i class="fas fa-shopping-cart"></i></button>
             </div>
             <div class="product">
                 <img src="./img/livros/17 cozinha simples.png" alt="Capa do Livro">
@@ -119,25 +94,7 @@
                 <p>R$50,00</p>
                 <input type="number" id="quantity7" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="50" data-nome="Produto 7" data-input="quantity7">Comprar</button>
-                <button class="carrinho-btn" onclick="adicionarAoCarrinho('Secreto das especiarias', 30)"><i class="fas fa-shopping-cart"></i></button>
-        </div>
-
-        <div class="food-title">
-            <h3>Salada</h3>
-        </div>
-        <div class="container-item">
-            <div class="item">
-                <div class="descricao">
-                    <h4>Salada de Quinoa</h4>
-                    <p>Salada refrescante e nutritiva com quinoa crocante</p>
-                    <p> <img src="/img/payments.png"> 20,00</p>
-                    <ul>
-                        <li><a href="/login.html">Comprar</a></li>
-                    </ul>
-                </div>
-                <div class="img-descricao">
-                    <img src="/img/salada de quinoa.jpg" alt="">
-                </div>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('cozinha simples', 50)"><i class="fas fa-shopping-cart"></i></button>
             </div>
             <div class="product">
                 <img src="./img/livros/8 sabor do tempo.png" alt="Capa do Livro">
@@ -146,7 +103,7 @@
                 <p>R$55,00</p>
                 <input type="number" id="quantity8" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="55" data-nome="Produto 8" data-input="quantity8">Comprar</button>
-                <button class="carrinho-btn" onclick="adicionarAoCarrinho('Secreto das especiarias', 30)"><i class="fas fa-shopping-cart"></i></button>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('sabor do tempo', 55)"><i class="fas fa-shopping-cart"></i></button>
             </div>
             <div class="product">
                 <img src="./img/livros/9cozinhando com amor2.png" alt="Capa do Livro">
@@ -155,7 +112,7 @@
                 <p>R$60,00</p>
                 <input type="number" id="quantity9" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="60" data-nome="Produto 9" data-input="quantity9">Comprar</button>
-                <button class="carrinho-btn" onclick="adicionarAoCarrinho('Secreto das especiarias', 30)"><i class="fas fa-shopping-cart"></i></button>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('cozinhando com amor2', 60)"><i class="fas fa-shopping-cart"></i> Adicionar ao Carrinho</button>
             </div>
             <div class="product">
                 <img src="./img/livros/13 sobremesas sem fronteiras.png" alt="Capa do Livro">
@@ -164,7 +121,7 @@
                 <p>R$65,00</p>
                 <input type="number" id="quantity10" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="65" data-nome="Produto 10" data-input="quantity10">Comprar</button>
-                <button class="carrinho-btn" onclick="adicionarAoCarrinho('Secreto das especiarias', 30)"><i class="fas fa-shopping-cart"></i></button>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('sobremesas sem fronteiras', 65)"><i class="fas fa-shopping-cart"></i></button>
             </div>
             <div class="product">
                 <img src="./img/livros/11 cozinha criativa.png" alt="Capa do Livro">
@@ -173,25 +130,7 @@
                 <p>R$70,00</p>
                 <input type="number" id="quantity11" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="70" data-nome="Produto 11" data-input="quantity11">Comprar</button>
-                <button class="carrinho-btn" onclick="adicionarAoCarrinho('Secreto das especiarias', 30)"><i class="fas fa-shopping-cart"></i></button>
-        </div>
-
-        <div class="food-title">
-            <h4>Frutos do Mar</h4>
-        </div>
-        <div class="container-item">
-            <div class="item">
-                <div class="descricao">
-                    <h4>Salmão</h4>
-                    <p>Peixe suculento e saboroso, rico em ômega-3</p>
-                    <p> <img src="/img/payments.png"> 70,00</p>
-                    <ul>
-                        <li><a href="/login.html">Comprar</a></li>
-                    </ul>
-                </div>
-                <div class="img-descricao">
-                    <img src="/img/images6.jpg" alt="">
-                </div>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('cozinha criativa', 70)"><i class="fas fa-shopping-cart"></i></button>
             </div>
             <div class="product">
                 <img src="./img/livros/12 sabores do mundo.png" alt="Capa do Livro">
@@ -200,20 +139,7 @@
                 <p>R$75,00</p>
                 <input type="number" id="quantity12" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="75" data-nome="Produto 12" data-input="quantity12">Comprar</button>
-                <button class="carrinho-btn" onclick="adicionarAoCarrinho('Secreto das especiarias', 30)"><i class="fas fa-shopping-cart"></i></button>
-                
-            <div class="item">
-                <div class="descricao">
-                    <h4>Salmão ao Molho de Ervas</h4>
-                    <p>Salmão grelhado com molho aromático de ervas</p>
-                    <p> <img src="/img/payments.png"> 90,00</p>
-                    <ul>
-                        <li><a href="/login.html">Comprar</a></li>
-                    </ul>
-                </div>
-                <div class="img-descricao">
-                    <img src="/img/salmão molho de ervas.jpg" alt="">
-                </div>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('sabores do mundo', 75)"><i class="fas fa-shopping-cart"></i></button>
             </div>
         </div>
     
