ajustes no footer

--- a/login.html
+++ b/login.html
@@ -131,7 +131,8 @@
     <div id="footer_copyright">
         @2024 Direitos reservados ao grupo3
     </div>
-</footer>                    
+</footer> 
+<button onclick="scrollToTop()" id="btnTopo" title="Voltar ao Topo"></button>              
 </body>
 </html>
 
