--- a/loja.html
+++ b/loja.html
@@ -112,7 +112,7 @@
                 <p>R$60,00</p>
                 <input type="number" id="quantity9" placeholder="Quantidade">
                 <button class="comprar-btn" data-preco="60" data-nome="Produto 9" data-input="quantity9">Comprar</button>
-                <button class="carrinho-btn" onclick="adicionarAoCarrinho('cozinhando com amor2', 60)"><i class="fas fa-shopping-cart"></i> Adicionar ao Carrinho</button>
+                <button class="carrinho-btn" onclick="adicionarAoCarrinho('cozinhando com amor2', 60)"><i class="fas fa-shopping-cart"></i></button>
             </div>
             <div class="product">
                 <img src="./img/livros/13 sobremesas sem fronteiras.png" alt="Capa do Livro">
