--- a/cadastro.html
+++ b/cadastro.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/login.js" defer></script>
-    <title>Cadastro</title>
-    <link rel="stylesheet" href="./css/cadastro.css">
-    <script src="./js/cadastro.js" defer></script>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Cozinha  20</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+         rel="stylesheet">
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
+         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="./css/cadastro.css">
+    </head>
 <body>
-   
+     
     <header>
         <div class="container">
             <div class="logo">
@@ -21,7 +25,7 @@
                     <li class="nav-item"><a href="equipe.html">Equipe</a></li>
                     <li class="nav-item"><a href="receitas.html">Receitas</a></li>
                     <li class="nav-item"><a href="loja.html">Loja</a></li>
-                    <li class="nav-item"><a href="login.html">Entrar</a></li>
+                    <li class="nav-item active"><a href="login.html">Entrar</a></li>
                 </ul>
             </nav>
         </div>
@@ -81,16 +85,16 @@
             <p>As melhores receitas na sua mão.</p>
 
             <div id="footer_social_media">
-                <a href="#" class="footer-link" id="instagram">
-                    <i class="fa-brands fa-instagram">I</i>
+                <a href="https://www.instagram.com/" target="_blank" class="footer-link" id="instagram">
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
 
-                <a href="#" class="footer-link" id="facebook">
-                    <i class="fa-brands fa-facebook-f">F</i>
+                <a href="https://www.facebook.com/" target="_blank"  class="footer-link" id="facebook">
+                    <i class="fa-brands fa-facebook-f"></i>
                 </a>
 
-                <a href="#" class="footer-link" id="whatsapp">
-                    <i class="fa-brands fa-whatsapp">W</i>
+                <a href="https://web.whatsapp.com/" target="_blank" class="footer-link" id="whatsapp">
+                    <i class="fa-brands fa-whatsapp"></i>
                 </a>
             </div>
         </div>
@@ -100,13 +104,13 @@
                 <h3>Contatos</h3>
             </li>
             <li>
-                <a href="#" class="footer-link">whatsapp</a>
+                <a href="https://web.whatsapp.com/" target="_blank" class="footer-link">whatsapp</a>
             </li>
             <li>
-                <a href="#" class="footer-link">Facebook</a>
+                <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
             </li>
             <li>
-                <a href="#" class="footer-link">Instagram</a>
+                <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
             </li>
         </ul>
 
@@ -115,18 +119,18 @@
                 <h3>Serviços</h3>
             </li>
             <li>
-                <a href="#" class="footer-link">Receitas</a>
+                <a href="receitas.html" class="footer-link">Receitas</a>
             </li>
             <li>
-                <a href="#" class="footer-link">Loja</a>
+                <a href="loja.html" class="footer-link">Loja</a>
             </li>
             <li>
-                <a href="#" class="footer-link">Diversos</a>
+                <a href="cadastro.html" class="footer-link">Trabalhe conosco</a>
             </li>
         </ul>
 
         <div id="footer_subscribe">
-            <h3>Subscribe</h3>
+            <h3>Inscreva-se!</h3>
 
             <p>
                 Deixe seu e-mail para receber atualizações.
@@ -144,6 +148,8 @@
     <div id="footer_copyright">
         @2024 Direitos reservados ao grupo3
     </div>
-</footer>                    
+</footer> 
+    <button onclick="scrollToTop()" id="btnTopo" title="Voltar ao Topo"></button>
+    <script src="./js/cadastro.js"></script>                  
 </body>
 </html>
