--- a/receitas.html
+++ b/receitas.html
@@ -28,6 +28,7 @@
             <div class="logo">
                 <!-- Logotipo da página -->
                 <img src="./img/slide/logo1.png" alt="Logo cozinha20">
+                <h2>Cozinha20</h2>
                 <!-- Imagem do logotipo com um texto alternativo -->
             </div>
             <button class="hamburger">&#9776;</button>
