--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <!-- Logo -->
             <div class="logo">
                 <img src="./img/slide/logo1.png" alt="Logo cozinha20">
+                <h2>Cozinha20</h2>
             </div>
             <!-- Botão de menu para telas pequenas -->
             <button class="hamburger">&#9776;</button>
