ajustes na página login

--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
                     <p id="senha-helper" class="helper-text">Mensagem de ajuda</p>
                 </div>
                 <div class="form-group">
-                    <button type="submit">Entrar</button>
+                    <button type="submit" id="botao_login">Entrar</button>
                 </div>
                 <div class="form-group">
                     <h5>Não tem cadastro?
@@ -166,9 +166,9 @@
             <!-- Descrição -->
                 <div id="input_group">
                     <!-- Grupo de entrada -->
-                    <label for="email"></label>
+                    <label for="email-footer"></label>
                      <!-- Rótulo para o campo de e-mail -->
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email-footer" name="email-footer" required>
                     <!-- Campo de e-mail -->
                     <button>
                         <i class="fas fa-envelope"></i>
@@ -195,4 +195,3 @@
 <!-- Script JavaScript -->    
 </body>
 </html>
-
