--- a/index.html
+++ b/index.html
@@ -50,26 +50,32 @@
             <div class="carousel-container">
                 <!-- Slides do carrossel -->
                 <div class="carousel-slide active">
-                    <img src="./img/slide/Escondidinho-de-aipim.jpg" alt="Escondidinho-de-aipim">
+                    <img src="./img/slide/moquecaa2.jpg" alt="moqueca">
                     <div class="carousel-text">
-                        <h2>Escondidinho de aipim</h2>
+                        <h2>Moqueca de camarão</h2>
                          <a href="loja.html">Ver mais</a>
                     </div>
                 </div>
                 <div class="carousel-slide">
-                    <img src="./img/receitas/maxresdefault.jpg" alt="cocada">
+                    <img src="./img/slide/pudin2.jpg" alt="pudim">
+                    <div class="carousel-text">
+                        <h2>Pudim de leite</h2>
+                         <a href="loja.html">Ver mais</a>
+                    </div>
+                </div>
+                <div class="carousel-slide">
+                    <img src="./img/slide/salmão2.jpg" alt="salmão">
+                    <div class="carousel-text">
+                        <h2>Salmão ao molho</h2>
+                        <a href="loja.html">Ver mais</a>
+                    </div>
+                </div>
+                <div class="carousel-slide">
+                    <img src="./img/slide/codada2.jpg" alt="cocada">
                     <div class="carousel-text">
                         <h2>Cocada cremosa</h2>
                          <a href="loja.html">Ver mais</a>
                     </div>
-                </div>
-                <div class="carousel-slide">
-                    <img src="./img/receitas/pudim.jpg" alt="pudim">
-                    <div class="carousel-text">
-                        <h2>Pudim de leite</h2>
-                        <a href="loja.html">Ver mais</a>
-                    </div>
-                </div>
             </div>         
         </section>   
 </main>
