reajustes finais do projeto

--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
             <div class="card">
                 <img src="img/receitas/salmão com molho de ervas.jpg" alt="Salmão ao molho de ervas">
                 <h2>Salmão ao molho de ervas</h2>
-                <p>Uma receita deliciosa e reconfortante, perfeita para qualquer ocasião.</p>
+                <p>Desfrute de uma experiência gastronômica sublime com nosso delicioso salmão ao molho de ervas frescas.Adicione mais sabor nas suas refeições.</p>
                 <a href="receitas.html">Ver Receita</a>
             </div>
             <div class="card">
                 <img src="./img/receitas/lasanha de frango.jpg" alt="lasanha de frango">
                 <h2>Lasanha de frango</h2>
-                <p>Uma salada refrescante e nutritiva, repleta de sabores frescos e saudáveis.</p>
+                <p>Experimente a indulgência reconfortante da nossa lasanha de frango, um clássico da culinária italiana reinventado para satisfazer os paladares mais exigentes.</p>
                 <a href="receitas.html">Ver Receita</a>
             </div>
             <div class="card">
                 <img src="./img/receitas/strogronof carne.jpg" alt="Srogronoff de carne">
                 <h2>Strogronoff de carne</h2>
-                <p>Um prato delicioso e saudável, perfeito para uma refeição leve e saborosa.</p>
+                <p>Renda-se ao prazer irresistível do nosso Strogonoff de Frango.Delicados pedaços de frango são cuidadosamente preparados.</p>
                 <a href="receitas.html">Ver Receita</a>
             </div>
         </div>
